# artifact

./: CHANGELOG.md  README.md  package.json  poetry.toml  pyproject.toml  renovate.json
.github/workflows/: check.yml  deploy.yml
artifact/: README.md
artifact/mandelbrot_core/: burning_ship.py  julia.py  mandelbrot.py
artifact/ui/: app.py
mandelbrot_core/: mandelbrot.py
src/fractalzoomer/core/: .gitkeep  __init__.py  base.py  burning_ship.py  julia.py  mandelbrot.py
src/fractalzoomer/mandelbrot_core/: burning_ship.py  julia.py
src/fractalzoomer/ui/: .gitkeep  __init__.py  app.py  coordinates.py
src/fractalzoomer/utils/: __init__.py  exporter.py
tests/: test_coordinate_mapping.py  test_core.py  test_exporter.py  test_parameter_julia.py
ui/: app.py
